Fix osgi bundle javadoc and osgi xjc bundle dependencies.
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>