@@ -173,9 +173,6 @@
                     </systemPropertyVariables>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
-                    <argLine>
-                        -Djdk.attach.allowAttachSelf
-                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
